Fix overflow of current location details on smaller windows

--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ a {
 ========================= */
 #home {
   width: 100%;
-  height: 100svh;
+  min-height: 100svh;
   display: flex;
 }
 
